Remove JIB plugin. Provide for spring-boot-maven-plugin configuration for build-image. Provide tests for spring-boot-maven-plugin configuration.